# magma

./: .bazelrc  WORKSPACE.bazel  shell.nix  test_agwc_lf.sh
.devcontainer/: devcontainer.json
.github/workflows/: agw-build-publish-container.yml  agw-coverage.yml  agw-docker-load-test.yml  agw-workflow.yml  autolabel-pullrequests.yml  backport-pull-request.yml  bazel.yml  bazel_build_in_vm.yml  build_all.yml  check-rebase.yml  cloud-workflow.yml  codeowners-syntax.yml  codeql-analysis.yml  comment-pr-on-check-failure.yml  cwag-workflow.yml  cwf-integ-test.yml  cwf-operator.yml  dco-check.yml  debug_arm_build.yml  debug_arm_build_sh.yml  debug_ssh.yml  deploy-build-from-pr.yml  docker-builder-devcontainer.yml  docker-builder-python-precommit.yml  docs-workflow.yml  docusaurus-workflow.yml  dp-workflow.yml  federated-integ-test.yml  feg-workflow.yml  fossa-workflow.yml  gcc-problems.yml  golang-build-test.yml  golang-check-version.yml  helm-chart-dependency-check.yml  helm-deploy-on-demand.yml  insync-checkin.yml  lte-integ-test-bazel-magma-deb.yml  lte-integ-test-bazel.yml  lte-integ-test-bazel2.yml  lte-integ-test-containerized.yml  (+19 more)
bazel/: python_swagger.bzl
bazel-build-debian-packages/: BUILD.bazel
bazel-build-debian-packages/hello/: BUILD.bazel
bazel/bazel_build_in_vm/: Vagrantfile  setup_bazel-base_environment.sh
ci-scripts/: firebase_push.py
customizations-jan/: on_workflow_dispatch.py  rebase_on_master.sh
docker_test/: Dockerfile
lte/gateway/: Vagrantfile  fabfile.py  makefile.dot  readme_ansible_provisioning.md
lte/protos/: default.nix
(+68 files in other folders)
